# Reannotate

./: .gitignore  LICENSE  LICENSE.PSF  README.md  pyproject.toml
.github/workflows/: auto_test.yml  publish_to_pypi.yml  test_builds.yml
perf/: compare_annotation_methods.py
src/reannotate/: __init__.py  __init__.pyi  _ast_tools.py  _mini_reannotate.py  _version.py  inspect_signature_patch.py  patches.py
tests/: test_generic.py  test_patched_inspect.py  test_reannotate.py
