[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "reannotate"
description="An extension to annotationlib to assist in creating new annotate functions"
authors = [
  { name="David C Ellis" },
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
]
license = "MIT AND PSF-2.0"
license-files = [
    "LICENSE",
    "LICENSE.PSF",
]
readme="README.md"
dynamic = ['version']

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",  # Don't include github files in the sdist
    "/scratch",
    "uv.lock",  # The lockfile is not part of the sdist
]

[tool.hatch.build.hooks.vcs]
version-file = "src/reannotate/_version.py"
template = """
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""


[tool.pytest.ini_options]
addopts= "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.report]
# Exclude vendored code
exclude_also = [
    "def __repr__",
]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"  # Not all type ignore comments are for ty

[tool.ruff.lint.per-file-ignores]
# Ignore undefined names in test files - these are used for ForwardRef checks
"src/*.py" = ["F811"]  # Ruff doesn't recognise fake overloads as overloads
"tests/*.py" = ["F821"]
